--- a/src/main/resources/views/ShowLibrary.fxml
+++ b/src/main/resources/views/ShowLibrary.fxml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.ShowLibraryController">
     <children>
-        <Label layoutX="434.0" layoutY="339.0" text="PRUEBA LIBRERIA" />
+        <Label layoutX="59.0" layoutY="42.0" styleClass="menuTitle" text="Tus canciones favoritas" />
+        <TableView fx:id="tableViewSong" layoutX="59.0" layoutY="103.0" prefHeight="350.0" prefWidth="932.0" styleClass="table">
+            <columns>
+                <TableColumn fx:id="columnNameSong" prefWidth="216.0" styleClass="column" text="Nombre" />
+                <TableColumn fx:id="columnAlbumSong" prefWidth="171.0" text="Albúm" />
+            <TableColumn fx:id="columnArtistSong" prefWidth="206.0" text="Artista" />
+            <TableColumn fx:id="columnYearSong" prefWidth="166.0" text="Año" />
+            <TableColumn fx:id="columnDurationSong" prefWidth="170.0" text="Duración" />
+            </columns>
+        </TableView>
+        <ImageView fx:id="imageViewCoverSong" fitHeight="154.0" fitWidth="211.0" layoutX="59.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
+        <Button fx:id="btnShowSong" layoutX="791.0" layoutY="472.0" mnemonicParsing="false" onAction="#showSong" styleClass="menuBtn" text="Ver canción" />
+      <Button fx:id="btnShowArtist" layoutX="791.0" layoutY="519.0" mnemonicParsing="false" onAction="#showArtist" styleClass="menuBtn" text="Ver arista" />
+      <Button fx:id="btnRemoveFavorites" layoutX="79.0" layoutY="633.0" mnemonicParsing="false" onAction="#removeFavorites" styleClass="menuBtn" text="Eliminar de favoritos" />
     </children>
 </AnchorPane>
